# Autarkeia

./: .clang-format  CMakeLists.txt  main.cpp
examples/asteroids/: CMakeLists.txt
examples/asteroids/include/: BulletSprite.hpp  Ship.hpp  ShipSprite.hpp
examples/asteroids/src/: Ship.cpp  main.cpp
examples/dvd/: CMakeLists.txt  DVD.cpp  DVD.hpp
examples/moving_ball/: CMakeLists.txt  MovingBall.cpp
examples/snake/: CMakeLists.txt  main.cpp
examples/text_drawing/: CMakeLists.txt  main.cpp
modules/cartesian/: CMakeLists.txt
modules/cartesian/include/: Vec2I.hpp
modules/catch2/: CMakeLists.txt
modules/drawing/: CMakeLists.txt
modules/drawing/include/: Characters.hpp  DrawUtils.hpp  Frame.hpp  LetterGlyphs.hpp  Sprite.hpp  SpritePC.hpp  TextDrawUtils.hpp  Vec2I.hpp
modules/drawing/src/: DrawUtils.cpp  Frame.cpp  Sprite.cpp  TextDrawUtils.cpp  dummy.cpp
modules/drawing/test/: CMakeLists.txt  DrawUtilsClearTests.cpp  DrawUtilsConvenienceFunctions.hpp  DrawUtilsDrawLineTests.cpp  DrawUtilsPixelTests.cpp  DrawUtilsTest.cpp  run_tests.sh
modules/entity/: CMakeLists.txt
modules/entity/include/: Entity.hpp
modules/entity/src/: Entity.cpp
modules/input/: CMakeLists.txt
modules/input/common/: CMakeLists.txt
modules/input/common/include/: KeyboardInfo.hpp  KeyboardInputHandler.hpp  PeripheralInputException.hpp
modules/input/common/src/: KeyboardInfo.cpp  KeyboardInputHandler.cpp
modules/input/peripheral_detection/: CMakeLists.txt
modules/input/peripheral_detection/include/: InputPeripheralDetection.hpp  PeripheralDetector.hpp
modules/input/peripheral_detection/src/: InputPeripheralDetection.cpp  PeripheralDetector.cpp
modules/math/: CMakeLists.txt
modules/math/include/: Matf.hpp
modules/sprite/: CMakeLists.txt
modules/sprite/include/: Sprite.hpp
modules/sprite/src/: Sprite.cpp
